<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offwhite"
    android:orientation="vertical"
    tools:context=".view.login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="11"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/login_Email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="2"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="15dp"
        android:text="test@gmail.com" />

    <EditText
        android:id="@+id/login_Password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="2"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/pawword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="15dp"
        android:text="test@123456" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="2"
        android:backgroundTint="@color/yellow"
        android:text="@string/login"
        app:cornerRadius="15dp" />

</androidx.appcompat.widget.LinearLayoutCompat>