<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/offwhite"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:padding="10dp">

            <TextView
                android:id="@+id/meal_card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toStartOf="@+id/meal_EGP"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/meal_card_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/meal_card_title"
                android:layout_alignStart="@id/meal_card_title"
                android:layout_toStartOf="@+id/meal_EGP"
                android:text="@string/details"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/meal_card_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/price"
                android:textColor="@color/yellow"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/meal_EGP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/meal_card_price"
                android:gravity="center"
                android:text="@string/EGP"
                android:textColor="@color/yellow"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>